<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/playersetup_background"
    tools:context=".Playersetup">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="113dp"
        android:layout_height="35dp"
        android:layout_marginTop="228dp"
        android:text="@string/player1text"
        android:textColor="#9C27B0"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/playername1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/playername1"
        android:layout_width="259dp"
        android:layout_height="63dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/player1submit"
        android:inputType="text"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/playername2"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/player2submit"
        android:inputType="text"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="99dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/player2text"
        android:textColor="#9C27B0"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/playername2"
        app:layout_constraintTop_toBottomOf="@+id/playername1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="142dp"
        android:layout_height="63dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_bg"
        android:onClick="nextButtonclick"
        android:text="@string/nextbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playername2" />

    <Button
        android:id="@+id/button15"
        android:layout_width="63dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/backdot"
        android:contentDescription="Button without text"
        android:onClick="backbtnonclick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>