<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/backg_pic">

    <TextView
        android:id="@+id/textView"
        android:layout_width="247dp"
        android:layout_height="51dp"
        android:layout_marginTop="56dp"
        android:rotationY="0"
        android:text="@string/homeTitle"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textColorLink="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="158dp"
        android:layout_height="61dp"
        android:layout_marginTop="376dp"
        android:background="@drawable/button_bg"
        android:text="@string/playwith"
        android:textColor="#790C0004"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="154dp"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_bg"
        android:onClick="playButtonClick"
        android:text="@string/playButton"
        android:textColor="#9EFFFFFF"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>